--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@payloadcms/admin-bar": "3.71.1",
+    "@payloadcms/db-mongodb": "3.71.1",
     "@payloadcms/live-preview-react": "3.71.1",
     "@payloadcms/next": "3.71.1",
     "@payloadcms/plugin-form-builder": "3.71.1",
@@ -31,11 +32,13 @@
     "@payloadcms/plugin-search": "3.71.1",
     "@payloadcms/plugin-seo": "3.71.1",
     "@payloadcms/richtext-lexical": "3.71.1",
+    "@payloadcms/storage-vercel-blob": "^3.72.0",
     "@payloadcms/ui": "3.71.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/blob": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -52,8 +55,7 @@
     "react-hook-form": "7.45.4",
     "sharp": "0.34.2",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@payloadcms/db-mongodb": "3.71.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
