--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@payloadcms/plugin-search": "3.71.1",
     "@payloadcms/plugin-seo": "3.71.1",
     "@payloadcms/richtext-lexical": "3.71.1",
-    "@payloadcms/storage-vercel-blob": "^3.72.0",
+    "@payloadcms/storage-vercel-blob": "3.71.1",
     "@payloadcms/ui": "3.71.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
@@ -43,6 +43,9 @@
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.28.1",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
     "lucide-react": "^0.378.0",
