--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "framer-motion": "^12.28.1",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.378.0",
     "next": "15.4.10",
     "next-sitemap": "^4.2.3",
